--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- Example -->
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <script>...</script>
@@ -20,4 +20,5 @@
   src="https://www.facebook.com/tr?id=1623199497808241&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Facebook Pixel Code -->
-</head>Hello Pixel
+</head>
+Hello Pixel
