--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
   fbq('init', '1623199497808241');
   fbq('track', 'PageView');
 </script>
+<script>
+fbq('track','Purchase', {
+currency: 'USD',
+value: 50.00
+});
+</script>
 <!-- End Facebook Pixel Code -->
 </head>
 Hello Pixel
